revert href change - handled in yml

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MilleBornesWeb</title>
-    <base href="/MilleBornesWeb/" />
+    <base href="/" />
     <link rel="preload" id="webassembly" />
     <link rel="stylesheet" href="css/app.css" />
     <link href="MilleBornesWeb.styles.css" rel="stylesheet" />
